--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -21,7 +21,7 @@
         padding-top: 106px;
     }
 
-    &-container {
+    &__container {
         display: flex;
         padding-bottom: 106px;
     }
