--- a/scss/components/_advantages.scss
+++ b/scss/components/_advantages.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    list-style: none;
 
     &__icon {
         width: 270px;
