--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -13,6 +13,7 @@
     &__menu-list {
         display: flex;
         align-items: center;
+        list-style: none;
     }
     &__menu-link {
         position: relative;
@@ -23,6 +24,7 @@
     &__contact-list {
         display: flex;
         align-items: center;
+        list-style: none;
     }
     &__contact-link {
         display: flex;
@@ -30,10 +32,6 @@
     }
     &__icon {
         margin-right: 10px;
-    }
-    &__contact-list-container {
-        display: flex;
-        fill: currentColor;
     }
     &__contact-list-item:not(:first-child) {
         padding-left: 30px;
@@ -70,15 +68,15 @@
         border-radius: 2px;
         background-color: $backlightColor;
     }
-}
-.is-active::after {
-    content: '';
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 45px;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $backlightColor;
+    &__menu-link--active::after {
+        content: '';
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        top: 45px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: $backlightColor;
+    }
 }
