--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -7,7 +7,7 @@
     text-decoration: none;
     padding-right: 93px;
 
-    &--header {
+    &__studio--header {
         color: $fontColorPrimary;
     }
 
