--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -4,6 +4,7 @@
     gap: 30px;
     justify-content: space-between;
     margin-top: -128px;
+    list-style: none;
 
     &__card {
         border: 1px solid #eee;
